--- a/ticket.html
+++ b/ticket.html
@@ -14,10 +14,22 @@
 </head>
 <body>
     <header>
+    <img src="/assets/images/logo-full.svg" alt="logo-full" width="150px">
+    <p>Coding Cof</p>
     </header>
     <main>
-        <h2>Congrats <strong>Jonatan Kristof!<br>Your Ticket is Ready!</strong></h2>
+        <section class="ticket_congrats">
+            <h1 id="congrats">Congrats <span id="ticket_name">Jonatan Kristof</span><br>Your Ticket is Ready!</h1> 
+            <p> We've emailed your tickect to <br> <span id="ticket_email"> jonatan@email.com </span> and will send updates<br>in the run up to the event.</p>
+        </section>
+
+        <section class="ticket_info">
+            
+
+        </section>
+
     </main>
+    <script src="ticket.js" defer></script>
     <footer>
 
     </footer>
