--- a/ticket.html
+++ b/ticket.html
@@ -19,17 +19,39 @@
     </header>
     <main>
         <section class="ticket_congrats">
-            <h1 id="congrats">Congrats <span id="ticket_name">Jonatan Kristof</span><br>Your Ticket is Ready!</h1> 
+            <h1 id="congrats">Congrats <span>Jonatan Kristof</span><br>Your Ticket is Ready!</h1> 
             <p> We've emailed your tickect to <br> <span id="ticket_email"> jonatan@email.com </span> and will send updates<br>in the run up to the event.</p>
         </section>
+        
+        <section class="ticket">
+            <div class="ticket_info">
+                <div class="ticket_header">
+                    <div class="ticket_title">
+                        <img src="assets/images/logo-mark.svg" alt="">
+                    </div>
+                    <div class="ticket_date">
+                        <h3>Coding Conf</h3>
+                        <p>Jan 31, 2025/ Austin, TX</p>
+                    </div>
+                </div>
 
-        <section class="ticket_info">
-            
-
+                <div class="ticket_footer">
+                    <div class="ticket_avatar">
+                        <img id="avatar" src="assets/images/image-avatar.jpg" alt="">
+                    </div>
+                    <div class="ticket_data">
+                        <span> Jonatan Kristof </span>
+                        <div class="ticket_github">
+                            <img src="assets/images/icon-github.svg">
+                            <p>@Jonathankristof010</p>
+                        </div>
+                    </div>   
+                </div>
+            </div>
         </section>
 
     </main>
-    <script src="ticket.js" defer></script>
+    <script src="ticket.js" ></script>
     <footer>
 
     </footer>
