--- a/ticket.html
+++ b/ticket.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section class="ticket_congrats">
-            <h1 id="congrats">Congrats <span>Jonatan Kristof</span><br>Your Ticket is Ready!</h1> 
+            <h1 id="congrats">Congrats, <span id=ticket_name class="name">Jonatan Kristof</span><br>Your Ticket is Ready!</h1> 
             <p> We've emailed your tickect to <br> <span id="ticket_email"> jonatan@email.com </span> and will send updates<br>in the run up to the event.</p>
         </section>
         
@@ -31,7 +31,7 @@
                     </div>
                     <div class="ticket_date">
                         <h3>Coding Conf</h3>
-                        <p>Jan 31, 2025/ Austin, TX</p>
+                        <p id="date">Jan 31, 2025/ Austin, TX</p>
                     </div>
                 </div>
 
@@ -40,10 +40,10 @@
                         <img id="avatar" src="assets/images/image-avatar.jpg" alt="">
                     </div>
                     <div class="ticket_data">
-                        <span> Jonatan Kristof </span>
+                        <span class="name"> Jonatan Kristof </span>
                         <div class="ticket_github">
                             <img src="assets/images/icon-github.svg">
-                            <p>@Jonathankristof010</p>
+                            <p id="github_username">@Jonathankristof010</p>
                         </div>
                     </div>   
                 </div>
